Minor fixes: - index.js: moved LastLocationProvider inside CurrentUserProvider - Asset: changed min-height to 120px to accommodate PopularProfiles on mobile - Button: added custom colour for :hover:active and focus - PostCreateEditForm: adjusted the Container min height - UsernameForm, UserPasswordForm: added py-2 so that the top padding is consistent across pages - ProfilePage: swapped axios for axiosReq for all the requests, as they wouldn't exactly fail otherwise

--- a/src/components/Asset.module.css
+++ b/src/components/Asset.module.css
@@ -3,5 +3,5 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 250px;
+  min-height: 120px;
 }
