--- a/src/components/PostCreateEditForm.module.css
+++ b/src/components/PostCreateEditForm.module.css
@@ -1,3 +1,3 @@
 .Container {
-  min-height: 352px;
+  min-height: 343px;
 }
